[tool.poetry]
name = "locust-framework"
version = "0.1.0"
description = "locust通用测试框架"
authors = ["ljxpython <1030470148@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pre-commit = "^3.8.0"
black = "^24.8.0"
isort = "^5.13.2"
dynaconf = "^3.2.6"
loguru = "^0.7.2"
pyyaml = "^6.0.2"
requests = "^2.32.3"
pytest = "^8.3.3"
assertpy = "^1.1"
click = "^8.1.7"
faker = "^30.0.0"
jmespath = "^1.0.1"
jsonpath-ng = "^1.6.1"
numpy = "^2.1.1"
pandas = "^2.2.3"
polling2 = "^0.5.0"
pytest-ordering = "^0.6"
pytest-repeat = "^0.9.3"
pytest-rerunfailures = "^14.0"
pytest-xdist = "^3.6.1"
retry = "^0.9.2"
allure-pytest = "^2.13.5"
locust = "^2.31.7"
humps = "^0.2.2"
locust-plugins = "^4.5.3"
peewee = "^3.17.6"
pymysql = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
